# IoT_Monnitoring_Server

./: .~  CLAUDE.md  Documentación.md  docker-compose.yml  st0255.pem
auth-service/: Dockerfile  auth_server.py  users.json
clients/operator/: CMakeLists.txt  README.md
clients/operator/src/: gui.cpp  gui.h  main.cpp  network_thread.cpp  network_thread.h
clients/sensors/: config.json  requirements.txt  sensor_simulator.py
docs/: protocolo_iotp.md
infra/: setup_ec2.sh
server/: Dockerfile  Makefile
server/src/: auth_client.c  auth_client.h  http_handler.c  http_handler.h  logger.c  logger.h  main.c  protocol.c  protocol.h  sensor_manager.c  sensor_manager.h  server.c  server.h
server/web/: dashboard.html  login.html
